plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id "com.github.johnrengelman.shadow" version "6.1.0"
}

group 'pt.shop.management'
version '2.71'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
    jcenter()
}

mainClassName = "pt.shop.management.ui.main.Start"

shadowJar {
    manifest {
        attributes 'Main-Class': mainClassName
    }
    mergeServiceFiles()
}

run {
    jvmArgs = [
            "--add-modules=javafx.controls,javafx.fxml,javafx.graphics",
            "--add-reads=javafx.base=ALL-UNNAMED",
            "--add-reads=javafx.graphics=ALL-UNNAMED",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
    ]
}

javafx {
    version = "11.0.2"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
}

dependencies {
    implementation 'junit:junit:4.12'
    implementation 'com.jcraft:jsch:0.1.55'
    implementation 'commons-io:commons-io:2.6'
    implementation 'com.jfoenix:jfoenix:9.0.10'
    implementation 'mysql:mysql-connector-java:8.0.22'
    implementation 'org.apache.commons:commons-lang3:3.11'
    implementation 'org.apache.commons:commons-dbcp2:2.8.0'
    implementation 'org.kordamp.ikonli:ikonli-javafx:11.5.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.13.3'
    implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
    implementation 'org.kordamp.ikonli:ikonli-icomoon-pack:11.5.0'
    implementation 'org.kordamp.ikonli:ikonli-dashicons-pack:11.5.0'
    implementation 'org.kordamp.ikonli:ikonli-fontawesome-pack:11.5.0'
}